# FQFeeder

./: CMakeLists.txt  LICENSE  README.md
include/: FastxParser.hpp  FastxParserThreadUtils.hpp  kseq++.hpp
src/: CMakeLists.txt  FastxParser.cpp  TestKseq.cpp  TestReader.cpp
